Fix flickering issue and compress background

--- a/digitalu/scss/common.scss
+++ b/digitalu/scss/common.scss
@@ -38,9 +38,17 @@ a:hover{
 //Landscape phones and down 
 @media (max-width: 480px) { 
   
+  
+  
+  ::-webkit-scrollbar {
+      width: 6px;
+  }
+   
+  
     body{
-       background: url('../img/nebula.jpg') no-repeat top center fixed;
+       background: url('../img/nebula_mobile.jpg') no-repeat top center fixed;
        padding: 0;
+       overflow-x: hidden;
     }
     
     .container{
@@ -50,9 +58,8 @@ a:hover{
       -webkit-transform: rotate(-5deg); 
       -moz-transform: rotate(-5deg); 
       padding: 0px 20px 0px 20px;
-      position: fixed;
-      top: 10px;
-      left: -15px;
+      margin-top: 10px;
+      margin-left: -15px;
       background: inherit;
       z-index: 10;
       height: 50px;
@@ -101,7 +108,6 @@ a:hover{
       -webkit-transform: rotate(-5deg); 
       -moz-transform: rotate(-5deg); 
       background-color: rgba(0,0,0,0.3);
-      position: absolute;
       height: 100%;
       width: 150%;
       z-index: -1;
@@ -122,7 +128,7 @@ a:hover{
   .content{
     color: white;
     text-shadow:0 -1px 1px rgba(0,0,0,0.5);
-    padding: 20px;
+    //padding: 5px;
     
     h1, h2 {
        text-align: center;
@@ -178,8 +184,8 @@ a:hover{
     
     ul {
       
-      border-top: double 2px rgba(255, 255, 255, 0.9);
-      border-bottom: double 2px rgba(255, 255, 255, 0.9);
+      //border-top: double 2px rgba(255, 255, 255, 0.9);
+      //border-bottom: double 2px rgba(255, 255, 255, 0.9);
       background-color: rgba(0,0,0,0.5);
       list-style-type: none;
       padding: 0;
@@ -240,15 +246,16 @@ a:hover{
     } 
   }
   
-}
-
-
-
 
 ::-webkit-scrollbar {
     width: 12px;
 }
  
+  
+}
+
+
+
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
     border-radius: 10px;
